k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advance-system
  labels:
    app.kubernetes.io/managed-by: kubectl
